assets/theme.css
/* ... */
.jdgm-prev-badge__stars,
.jdgm-prev-badge__text {
  display: inline-flex !important;
  vertical-align: middle !important;
  margin: 0 4px 0 0 !important;
  white-space: nowrap !important;
}

.jdgm-prev-badge__stars {
  float: none !important;
}

div:has(> .jdgm-widget) {
  margin-bottom: 0px !important;
}

div:has(> .product__title) {
  margin-top: 0px !important;
}

/*Best seller tag styles*/
.product-card__image-wrapper {
  position: relative;
}

.dc_best-seller-tag {
  background-color: #ffc954;
  color: #222222;
  position: absolute;
  top: 10px;
  left: 10px;
  padding: 2px 6px;
  font-size: 14px;
  font-weight: 600;
  text-transform: uppercase;
  border-radius: 4px;
  width: 98px;
  height: 24px;
  z-index: 10;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Warranty terms and conditions content styles */
.dc_content-bullet {
  font-size: 18px;
  color: #222222;
  font-weight: 500;
}

.dc_hide-bullets {
  list-style-type: none !important;
}

.dc_content-text {
  color: #676767;
  font-size: 16px;
}

.dc_content-bold-text {
  font-weight: 600;
  color: #222222;
}

.dc_margin-top {
  margin-top: 8px;
}

.dc_bullet-icon {
  font-size: 9px;
  vertical-align: middle;
  margin-right: 8px;
}

